docs/0.6/_sources/api/gammapy.spectrum.CountsSpectrum.rst.txt


CountsSpectrum
===============================

.. currentmodule:: gammapy.spectrum

.. autoclass:: CountsSpectrum
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~CountsSpectrum.default_interp_kwargs
      ~CountsSpectrum.energy
      ~CountsSpectrum.total_counts

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~CountsSpectrum.copy
      ~CountsSpectrum.fill
      ~CountsSpectrum.from_hdulist
      ~CountsSpectrum.peek
      ~CountsSpectrum.plot
      ~CountsSpectrum.plot_hist
      ~CountsSpectrum.read
      ~CountsSpectrum.rebin
      ~CountsSpectrum.to_hdulist
      ~CountsSpectrum.to_table
      ~CountsSpectrum.write

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: energy
   .. autoattribute:: total_counts

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: copy
   .. automethod:: fill
   .. automethod:: from_hdulist
   .. automethod:: peek
   .. automethod:: plot
   .. automethod:: plot_hist
   .. automethod:: read
   .. automethod:: rebin
   .. automethod:: to_hdulist
   .. automethod:: to_table
   .. automethod:: write

   
   