docs/0.13/_sources/api/gammapy.spectrum.CountsSpectrum.rst.txt
CountsSpectrum
==============

.. currentmodule:: gammapy.spectrum

.. autoclass:: CountsSpectrum
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~CountsSpectrum.quantity
      ~CountsSpectrum.total_counts

   .. rubric:: Methods Summary

   .. autosummary::

      ~CountsSpectrum.copy
      ~CountsSpectrum.downsample
      ~CountsSpectrum.energy_mask
      ~CountsSpectrum.fill
      ~CountsSpectrum.from_hdulist
      ~CountsSpectrum.peek
      ~CountsSpectrum.plot
      ~CountsSpectrum.plot_hist
      ~CountsSpectrum.read
      ~CountsSpectrum.to_hdulist
      ~CountsSpectrum.to_table
      ~CountsSpectrum.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: quantity
   .. autoattribute:: total_counts

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: downsample
   .. automethod:: energy_mask
   .. automethod:: fill
   .. automethod:: from_hdulist
   .. automethod:: peek
   .. automethod:: plot
   .. automethod:: plot_hist
   .. automethod:: read
   .. automethod:: to_hdulist
   .. automethod:: to_table
   .. automethod:: write
